[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-m8"
version = "1.0.0"
description = "FastAPI application framework for m8 consumer microservices."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Eli Serra", email = "e.serra173@gmail.com" }]
requires-python = ">=3.11"
keywords = ["fastapi", "auth", "microservices", "health", "jwt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.27.0",
    "packaging>=24.0",
    "anyio>=4.0",
    "auth-sdk-m8[config,security,fastapi,observability,redis]>=0.7.0,<0.8.0",
]

[project.optional-dependencies]
db       = ["sqlmodel>=0.0.21", "sqlalchemy>=2.0", "alembic"]
mysql    = ["pymysql>=1.2.0"]
postgres = ["psycopg2-binary>=2.9.0"]
all      = ["fastapi-m8[db,mysql,postgres]"]
dev      = ["fastapi-m8[all]", "pytest>=8.0", "anyio[trio]>=4.0", "httpx",
            "ruff>=0.9.0", "mypy>=1.14.0", "bandit>=1.8.0",
            "pytest-anyio>=0.0.0", "tenacity>=9.0",
            "coverage>=7.0", "pytest-cov>=6.0",
            "asgi-lifespan>=2.0"]

[project.scripts]
fastapi-m8-prestart = "fastapi_m8.scripts.pre_start:main"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_m8"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "C90", "D"]
ignore = [
    "E501",
    "D100", "D104", "D105", "D107",
    "D211", "D212", "D215",
    "D301", "D401", "D403", "D404", "D415", "D416", "D417",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["fastapi_m8"]

[tool.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fastapi_m8 --cov-report=xml --cov-report=term-missing"
